tests/compile-fail/invalid-length-zst.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
 --> $DIR/invalid-length-zst.rs:6:22
  |
6 |     let _: [(); 3] = concat_arrays!(x, y);
  |                      ^^^^^^^^^^^^^^^^^^^^
  |
  = note: source type: `main::ConcatArrays<[u8; 1], [u8; 1]>` (16 bits)
  = note: target type: `[u8; 3]` (24 bits)
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
